<package>
    <name>my_nodelet</name>
    <version>0.0.1</version>
    <description>
      A very simple ros wrapper
    </description>

    <maintainer email="jmayoral@maquintel.com">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nodelet</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>nodelet</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet.xml"/>
    </export>

</package>
