<package>
    <name>cpp_ros_wrapper</name>
    <version>0.0.1</version>
    <description>
      A very simple ros wrapper
    </description>

    <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>

    <run_depend>roscpp</run_depend>

</package>
