<package>
    <name>class_publisher_subscriber</name>
    <version>0.0.1</version>
    <description>
      A very simple ros cpp class with a publisher on a subscriber callback
    </description>

    <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
